<resources>
    <string name="app_name">TeachMe</string>
    <string name="tagline">Всё гениальное просто</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>
    <string name="cancel">Выход</string>
    <string name="select">Выбрать</string>
    <string name="forgot_password">Восстановление пароля</string>
    <string name="register">Регистрация</string>
    <string name="feedback">Обратная связь</string>
    <string name="about">О проекте</string>
    <string name="email">e-mail</string>
    <string name="ask_are_you_teacher">Вы репетитор?</string>
    <string name="ask_freeze_your_profile">Приостановить показ анкеты?</string>
    <string name="ask_unlock_profile">Возобновить пока анкеты?</string>
    <string name="pupil">Ученик</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_quick_search">Быстрый поиск</string>
    <string name="btn_all_profiles_in_my_city">Все анкеты в моем городе</string>
    <string name="btn_yes">ДА</string>
    <string name="btn_no">НЕТ</string>
    <string name="btn_select_subject">Выбор предмета</string>
    <string name="btn_add_yet">Добавить еще</string>
    <string name="btn_select_subway">Выбор станции метро</string>
    <string name="btn_select_promotion">Выбор способа продвижения</string>
    <string name="btn_select_experience">Опыт работы</string>
    <string name="btn_find">Найти</string>
    <string name="btn_prev">Назад</string>
    <string name="btn_profile">Профиль</string>
    <string name="btn_save">Сохранить</string>
    <string name="price">Цена</string>
    <string name="currency">р.</string>
    <string name="navi_edit_profile">Изменение анкеты</string>
    <string name="navi_freeze">Заморозка анкеты</string>
    <string name="navi_unlock_profile">Разморозка анкеты</string>
    <string name="navi_search">Поиск анкеты</string>
    <string name="navi_promotion">Продвижение анкеты</string>
    <string name="navi_about">О проекте</string>
    <string name="navi_feedback">Обратная связь</string>
    <string name="navi_favorites">Избранные</string>
    <string name="navi_search_teacher">Поиск репетитора</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_profile_teacher">Профиль преподавателя</string>
    <string name="title_reg_teacher_about">О себе</string>
    <string name="title_rules">Правила проекта</string>
    <string name="title_about">Благодарим за участие в проекте</string>
    <string name="title_type_promotion">Выбор способа продвижения анкеты:</string>
    <string name="switch_adopt_rules">Принять правила</string>
    <string name="switch_leave_house">Выезд на дом</string>
    <string name="switch_is_photo">Фото анкеты</string>
    <string name="tooManySubways">Можно выбрать до пяти станций метро</string>
    <string name="hint_fullname">ФИО</string>
    <string name="hint_firstName">Имя</string>
    <string name="hint_lastName">Фамилия</string>
    <string name="hint_fatherName">Отчество</string>
    <string name="hint_birthday">Дата рождения</string>
    <string name="hint_city">Город</string>
    <string name="hint_region">Округ</string>
    <string name="hint_district">Район</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_new_password">Новый пароль</string>
    <string name="hint_password_confirm">Подтверждение пароля</string>
    <string name="text_is_differ">Пароли не совпадают</string>
    <string name="pass_too_short">Пароль слишком короткий</string>
    <string name="text_login_existed">Такой логин уже существует</string>
    <string name="text_email_existed">Этот email уже используется</string>
    <string name="text_phone_existed">Этот телефон уже используется</string>
    <string name="hint_experience">Опыт работы</string>
    <string name="label_price">Стоимость</string>
    <string name="hint_finish_price">До</string>
    <string name="hint_start_price">От</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_subject">Предмет</string>
    <string name="hint_subway">Станция метро</string>
    <string name="text_download_avatar">Выбор фото</string>
    <string name="error_login_is_empty">Логин пустой. Введите логин</string>
    <string name="error_dont_agreement">Вы не приняли пользовательское соглашение</string>
    <string name="message_teacher_add_to_favorites">Репетитор добавлен в избранное</string>
    <string name="message_teacher_delete_from_favorites">Учитель удален из избранного</string>
    <string name="reg_warning_message">Поля не заполнены или заполнены неправильно</string>
    <string name="reg_warning_message_fields_wrong">Поля заполнены неправильно</string>
    <string name="reg_about_warning_message_">Полe не заполнено</string>
    <string name="text_code_confirmation">Вам на почту пришло письмо с кодом</string>
    <string name="btn_confirm">Подтвердить</string>
    <string name="tv_confirm">Код</string>
    <string name="select_search_activity_title">Выбор поиска</string>
    <string name="select_changes_activity_title">Изменения</string>
    <string name="result_search_activity_title">Результат поиска</string>
    <string name="ageShowTeacher">Возраст: </string>
    <string name="allChangesSave">Все изменения были сохранены</string>
    <string name="wrongOldPassword">Не верный старый пароль</string>
    <string name="wrongOtherPassword">Не верные данные</string>
    <string name="passwordModified">Пароль изменен</string>
    <string name="oldPassword">Старый пароль</string>
    <string name="newPassword">Новый пароль</string>
    <string name="confirmPassword">Повторить новый пароль</string>
    <string name="changePasswordTitle">Изменение пароля</string>
    <string name="changeEmailTitle">Изменение email</string>
    <string name="changeProfileTitle">Изменение профиля</string>
    <string name="changeNewEmail">Новый email</string>
    <string name="emailModified">Email изменен</string>
    <string name="emailCodeWrong">Код не верный</string>
    <string name="changes_profile">Изменить профиль</string>
    <string name="changes_email">Изменить Email</string>
    <string name="changes_password">Изменить пароль</string>
    <string name="pleaseWait">Подождите, пожалуйста </string>
    <string name="typeStrYearOne">Год</string>
    <string name="typeStrYearTwo">Года</string>
    <string name="typeStrYearThree">Лет</string>
    <string name="leaveHomeYes">Выезд на дом: Да</string>
    <string name="leaveHomeNo">Выезд на дом: Нет</string>
    <string name="onlyDistanceLearningYes">Только дистанционное обучение: Да</string>
    <string name="onlyDistanceLearningNo">Только дистанционное обучение: Нет</string>
    <string name="distanceLearningYes">Дистанционное обучение: Да</string>
    <string name="distanceLearningNo">Дистанционное обучение Нет</string>
    <string name="showTeacherAnketaStop">Показ анкеты приостановлен</string>
    <string name="showTeacherAnketaStart">Показ анкеты возобновлен</string>
    <string name="somethingBroken">Что то не работает</string>
    <string name="noInternetAccess">Нет подключения к интернету</string>
    <string name="noEmailApps"> Нет приложений для отправки Email </string>
    <string name="passwordChanges">Пароль изменен</string>
    <string name="impossibleToOpenPage">Невозможно открыть web страницу</string>
    <string name="any_city">Любой город</string>
    <string name="any_subject">Любой предмет</string>
    <string name="priceListFormat">%1$s %2$d руб, опыт %3$s</string>
    <string name="noPermissionSMS">Sorry, You don`t have permission for sms sending</string>
    <string name="noPermissionCall">Sorry, You don`t have permission for call</string>
    <string-array name="promotion">
        <item>Нет</item>
        <item>Золотая анкета</item>
        <item>Серебрянная анкета</item>
        <item>Медная анкета</item>
    </string-array>
    <string-array name="typeExperience">
        <item>Нет опыта</item>
        <item>До 1 года</item>
        <item>До 3 лет</item>
        <item>От 3 до 6 лет</item>
        <item>От 6 до 10 лет</item>
        <item>Свыше 10 лет</item>
    </string-array>
    <string-array name="typeExperienceOptional">
        <item>Любой опыт</item>
        <item>Нет опыта</item>
        <item>До 1 года</item>
        <item>До 3 лет</item>
        <item>От 3 до 6 лет</item>
        <item>От 6 до 10 лет</item>
        <item>Свыше 10 лет</item>
    </string-array>
    <string-array name="changeFragmentTeacherTags">
        <item>fullName</item>
        <item>description</item>
        <item>subjects</item>
        <item>contacts</item>
        <item>agreement</item>
    </string-array>
    <string-array name="regFragmentTeacherTags">
        <item>login</item>
        <item>select</item>
        <item>fullName</item>
        <item>description</item>
        <item>subjects</item>
        <item>contacts</item>
        <item>agreement</item>
    </string-array>
    <string-array name="regFragmentPupilTags">
        <item>login</item>
        <item>select</item>
        <item>contactsPupil</item>
        <item>agreementPupil</item>
    </string-array>
    <string name="title_dialog_freeze">Приостановить показ анкеты?</string>
    <string name="title_dialog_unfreeze">Возобновить показ анкеты?</string>
    <string name="title_dialog_city">Выбор города</string>
    <string name="title_dialog_subway">Выбор метро</string>
    <string name="title_dialog_subject">Выбор предмета</string>
    <string name="loginOrPasswordError">Неправильный логин или пароль</string>
    <string name="currencyRub">руб.</string>
    <string name="searchNothing">Ничего не найдено</string>
    <string name="programmerPersonAbout">Тулупов Алексей</string>
    <string name="programmerPositionAbout">Android разработчик</string>
    <string name="programmerEmailAbout">tulupov.alexe@yandex.ru</string>
    <string name="designerPersonAbout">Долгая Ольга</string>
    <string name="designerPositionAbout">Дизайнер - Дизайн иконки проекта.</string>
    <string name="designerEmailAbout">malaya_olga90@mail.ru</string>
    <string name="authorPersonAbout">Сергеев Кирилл</string>
    <string name="authorPositionAbout">Автор - Идея проекта. Схемы. Эскизы. Дизайн.</string>
    <string name="authorEmailAbout">sergeev811@gmail.com</string>
    <string name="textAgreementPupil">
"Основные правила проекта\n"
"1.1 Любой человек, прошедший регистрацию, автоматически соглашается с этим сводом правил и обязуется выполнять их.\n"
"1.2 Администрация проекта имеет полное право заблокировать ваш аккаунт за нарушение того или иного пункта данного свода правил.\n"
"1.3 Конфликтные ситуации решаются через администрацию в порядке личного обращения через форму обратной связи.\n"
"1.4 Правила могут быть изменены и дополнены в соответствии с решением администрации.\n\n"

"Общие правила\n"
"2.1 Ваш ник не должен содержать мата, оскорблений и т.д."
"2.2 Ваш ник не должен состоять полностью из цифр."
"2.3 Ваш ник не должен каким-либо образом указывать на принадлежность к Администраторам."
"2.4 Ник не должен являться названием стороннего проекта или рекламой чего-либо."
"2.5 Ваш ник не должен быть пропагандой наркотических средств, так же пропагандой нацизма/фашизма.\n"
"Запрещается\n"
"3.1 Регистрировать несколько аккаунтов."
    </string>
    <string name="switch_show_phone">Показывать номер телефона</string>
    <string name="switch_show_email">Показывать email</string>
    <string name="show_birth_date">Показывать возраст</string>
</resources>