<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorBg">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sc_reg_teacher_leave"
        android:text="@string/switch_leave_house"
        android:textSize="@dimen/font_size_main"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/left_padding_teacher_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sc_reg_teacher_show_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_show_phone"
        android:textSize="@dimen/font_size_main"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/left_padding_contacts"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sc_reg_teacher_show_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_show_email"
        android:textSize="@dimen/font_size_main"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/left_padding_contacts"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sc_reg_teacher_show_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_birth_date"
        android:textSize="@dimen/font_size_main"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/left_padding_contacts"
        />

    <TextView
        android:id="@+id/et_reg_teacher_subway"
        android:textSize="@dimen/font_size_main"
        android:paddingLeft="@dimen/left_padding_teacher_contacts"
        android:clickable="true"
        android:inputType="none"
        android:text="@string/hint_subway"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/edt_reg_teacher_phone"
        android:hint="@string/hint_phone"
        android:textSize="@dimen/font_size_main"
        android:paddingLeft="@dimen/left_padding_teacher_contacts"
        android:inputType="phone"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_phone_existed"
        android:paddingLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone_existed"
        android:textSize="@dimen/text_size_warning_message"
        android:textColor="@color/colorWarning"
        android:visibility="gone"
        />


    <!--<EditText-->
        <!--android:id="@+id/edt_reg_teacher_login"-->
        <!--android:hint="@string/hint_login"-->
        <!--android:textSize="@dimen/font_size_main"-->
        <!--android:paddingLeft="@dimen/left_padding_teacher_contacts"-->
        <!--android:textColorHint="@android:color/white"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <TextView
        android:id="@+id/tv_login_existed"
        android:paddingLeft="@dimen/left_padding_teacher_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login_existed"
        android:textSize="@dimen/text_size_warning_message"
        android:textColor="@color/colorWarning"
        android:visibility="gone"
        />

</LinearLayout>
