<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login"
            android:hint="@string/login"
            android:inputType="text"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"

            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            />

        <Button
            android:id="@+id/btn_enter"
            android:text="@string/enter"

            android:background="@drawable/btn_light_blue"
            android:textColor="@android:color/white"

            android:layout_marginTop="@dimen/activity_vertical_margin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_forgot_password"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"

        android:background="@drawable/btn_light_blue"
        android:textColor="@android:color/white"

        android:layout_above="@+id/btn_feedback"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_feedback"
        android:text="@string/feedback"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:layout_gravity="center_horizontal"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>

