<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_code_confirmation"/>

        <EditText
            android:id="@+id/edt_confirm_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/tv_confirm"
            android:layout_gravity="center"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_light_blue"
            android:textColor="@android:color/white"
            android:text="@string/btn_confirm"/>
    </LinearLayout>

</RelativeLayout>