<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/edt_forgot_pass_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_email"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edt_forgot_pass_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_new_password"
            android:layout_gravity="center"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edt_forgot_pass_newPass_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_password_confirm"
            android:layout_gravity="center"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_forgot_pas_confirm"
            android:layout_width="@dimen/width_btn_forgot_pswd"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_light_blue"
            android:textColor="@android:color/white"
            android:text="@string/btn_confirm"/>
    </LinearLayout>

</RelativeLayout>